k8s/base/ingress-frontend.yaml
# Ingress du frontend.
# DOIT vivre dans le même namespace que le Service ciblé ("frontend") : un Ingress
# ne peut router que vers des Services de SON propre namespace.
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend
  namespace: frontend
spec:
  ingressClassName: nginx
  rules:
    - host: journalintime.eu
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-nextjs-graphql
                port:
                  number: 3000
