k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: journalintime
  namespace: infra
spec:
  rules:
    - host: journalintime.eu
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-nextjs-graphql
                port:
                  number: 3000
    - host: api.journalintime.eu
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend-jaxrs-liquibase-graphql-api
                port:
                  number: 8080
